Started with cards

--- a/index.html
+++ b/index.html
@@ -19,28 +19,50 @@
 	<div class="container">
 		<nav class="ribbon">
 			<div class="mynav">
-			<div class="navleft">
-				left side
-			</div>
-			<div class="navcenter">
-				<div class="head-logo">
-					<ul>
-						<li>İ</li>
-						<li>S</li>
-						<li>T</li>
-						<li>İ</li>
-						<li>K</li>
-						<li>L</li>
-						<li>A</li>
-						<li>L</li>
-						<li> </li>
-						<li>B</li>
-						<li>Ü</li>
-						<li>F</li>
-						<li>E</li>
-					</ul>
+				<div class="navleft">
+					left side
 				</div>
-			</div>
+				<div class="navcenter">
+					<div class="head-logo">
+						<ul>
+							<li>İ</li>
+							<li>S</li>
+							<li>T</li>
+							<li>İ</li>
+							<li>K</li>
+							<li>L</li>
+							<li>A</li>
+							<li>L</li>
+							<li> </li>
+							<li>B</li>
+							<li>Ü</li>
+							<li>F</li>
+							<li>E</li>
+						</ul>
+					</div>
+					<div class="cool-imgs">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+						<img src="assets\img\nav-imgs\1.jpg" alt="">
+					</div>
+				</div>
 				<div class="navright">
 					right colm
 				</div>
