--- a/index.html
+++ b/index.html
@@ -1,26 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title></title>
-    <!-- Custom -->
-    <link href="assets/css/main.css" rel="stylesheet">
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+	<title></title>
+	<!-- Custom -->
+	<link href="assets/css/main.css" rel="stylesheet">
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-	<body>
-	<div class="container">
+</head>
+
+<body>
+	<div class="container nav-cont">
+		<div class="login">
+			<div class="sign-up">
+				Kaydol
+				<div class="sign-up-form">
+					<form action="" method="POST" role="form">
+						<input type="text" placeholder="Adınız">
+						<input type="text" placeholder="Soyadınız">
+						<input type="number" placeholder="Telefon Numaranız">
+						<input type="email" placeholder="E-mail">
+						<input type="password" placeholder="Şifre">
+						<textarea name="" id="" cols="30" rows="10" placeholder="Adresiniz"></textarea>
+						<button class="btn">Kaydol</button>
+					</form>
+				</div>
+			</div>
+			<div class="sign-in">
+				Giriş
+				<div class="sign-in-form">
+					<form action="" method="POST" role="form">
+						<input type="email" placeholder="E-mail">
+						<input type="password" placeholder="Şifre">
+						<button class="btn">Giriş Yap</button>
+					</form>
+				</div>
+			</div>
+		</div>
+		<div class="cards">
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		</div>
+		</div>
 		<nav class="ribbon">
 			<div class="mynav">
 				<div class="navleft">
-					left side
+					<ul>
+						<li>
+							<div class="homep tpop"><span class="hide">hakkimizda</span>Hakkımızda</div>
+						</li>
+						<li>
+							<div class="tpop"><span class="hide">galeri</span>
+							Galeri</div>
+						</li>
+						<li>
+							<div class="tpop"><span class="hide">menu</span>Menü</div>
+						</li>
+					</ul>
 				</div>
 				<div class="navcenter">
 					<div class="head-logo">
@@ -40,37 +100,41 @@
 							<li>E</li>
 						</ul>
 					</div>
-					<div class="cool-imgs">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-						<img src="assets\img\nav-imgs\1.jpg" alt="">
-					</div>
 				</div>
 				<div class="navright">
-					right colm
+					<ul>
+						<li>
+							<div class="tpop"><span class="hide">icecekler</span>İçecekler</div>
+						</li>
+						<li>
+							<div class="tpop"><span class="hide">etkinlikler</span>Etkinlikler</div>
+						</li>
+						<li>
+							<div class="tpop"><span class="hide">iletisim</span>İletişim</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
 	</div>
+	<div class="mypopup">
+		<div class="pop-back ">
+			<div class="1p"></div>
+			<div class="2p"></div>
+			<div class="3p"></div>
+			<div class="4p"></div>
+			<div class="5p"></div>
+			<div class="6p"></div>
+			<div class="7p"></div>
+			<div class="8p"></div>
+		</div>
+		<div class="content">
+			
+		</div>
+	</div>
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/bootstarp/bootstrap.min.js"></script>
 	<script src="assets/js/custom.js" type="text/javascript"></script>
-	</body>
+</body>
+
 </html>
