--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
 			</div>
 		</div>
 		<div class="cards">
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p1</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p2</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p3</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p4</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p5</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p6</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p7</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p8</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p9</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide"></span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p10</span><img src="assets\img\nav-imgs\1.jpg" alt="">
 		</div>
 		</div>
 		<nav class="ribbon">
@@ -129,7 +129,7 @@
 			<div class="8p"></div>
 		</div>
 		<div class="content">
-			
+
 		</div>
 	</div>
 	<script src="assets/js/jquery.min.js"></script>
