--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 							Galeri</div>
 						</li>
 						<li>
-							<div class="tpop"><span class="hide">menu</span>Menü</div>
+							<div class="tpop"><span class="hide">menuer</span>Menüler</div>
 						</li>
 					</ul>
 				</div>
@@ -107,7 +107,7 @@
 							<div class="tpop"><span class="hide">icecekler</span>İçecekler</div>
 						</li>
 						<li>
-							<div class="tpop"><span class="hide">etkinlikler</span>Etkinlikler</div>
+							<div class="tpop"><span class="hide">kampanya</span>Kampanyalar</div>
 						</li>
 						<li>
 							<div class="tpop"><span class="hide">iletisim</span>İletişim</div>
