--- a/assets/contents/iletisim.html
+++ b/assets/contents/iletisim.html
@@ -1,32 +1,16 @@
 <div class="closemark">
 	X
 </div>
-<div class="picture">
-</div>
-<div class="ings row">
-		<div class="col-md-8">
-			<center>
-				<h2>
-					The Buffalo Burger
-				</h2>
-			</center>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			</p>
+<div class="iletisim">
+	<h3>Görüş ve Önerileriniz</h3>
+	<form action="">
+		<input type="text" name="name" value="" placeholder="Adınız">
+		<input type="text" name="name" value="" placeholder="Soyadınız">
+		<br>
+		<h4>Mesajınız:</h4>
+		<textarea></textarea>
+		<div class="addtocard">
+			Gönder
 		</div>
-		<div class="col-md-4">
-			<center>
-			<div class="price">
-					<h3>
-						Fiyat:
-					</h3>
-					<p>
-						8.99 TL
-					</p>
-			</div>
-			<div class="addtocard">
-				Sepete Ekle
-			</div>
-		</center>
-		</div>
+	</form>
 </div>
