--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
 			</div>
 		</div>
 		<div class="cards">
-		<div class="holder"><span class="hide">p1</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p1</span><img src="assets\img\cards\1.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p2</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p2</span><img src="assets\img\cards\2.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p3</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p3</span><img src="assets\img\cards\3.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p4</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p4</span><img src="assets\img\cards\4.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p5</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p5</span><img src="assets\img\cards\5.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p6</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p6</span><img src="assets\img\cards\6.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p7</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p7</span><img src="assets\img\cards\7.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p8</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p8</span><img src="assets\img\cards\8.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p9</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p9</span><img src="assets\img\cards\9.jpg" alt="">
 		</div>
-		<div class="holder"><span class="hide">p10</span><img src="assets\img\nav-imgs\1.jpg" alt="">
+		<div class="holder"><span class="hide">p10</span><img src="assets\img\cards\10.jpg" alt="">
 		</div>
 		</div>
 		<nav class="ribbon">
@@ -78,7 +78,7 @@
 							Galeri</div>
 						</li>
 						<li>
-							<div class="tpop"><span class="hide">menuer</span>Menüler</div>
+							<div class="tpop"><span class="hide">menuler</span>Menüler</div>
 						</li>
 					</ul>
 				</div>
