--- a/assets/contents/galeri.html
+++ b/assets/contents/galeri.html
@@ -1,30 +1,51 @@
 <div class="closemark">
 	X
 </div>
-<div class="gallery">
+<div class="galery">
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 	  <!-- Indicators -->
 	  <ol class="carousel-indicators">
 	    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 	    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="7"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="8"></li>
+	    <li data-target="#carousel-example-generic" data-slide-to="9"></li>
 	  </ol>
 
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner" role="listbox">
 	    <div class="item active">
-	      <img src="..." alt="...">
-	      <div class="carousel-caption">
-	        ...
-	      </div>
+	      <img src="assets/img/galery/1.jpg" alt="...">
 	    </div>
 	    <div class="item">
-	      <img src="..." alt="...">
-	      <div class="carousel-caption">
-	        ...
-	      </div>
+	      <img src="assets/img/galery/2.jpg" alt="...">
 	    </div>
-	    ...
+	    <div class="item">
+	      <img src="assets/img/galery/3.jpg" alt="...">
+	    </div>
+	    <div class="item">
+	      <img src="assets/img/galery/4.jpg" alt="...">
+	    </div>
+	    <div class="item">
+	      <img src="assets/img/galery/5.jpg" alt="...">
+	    </div>
+	    <div class="item">
+	      <img src="assets/img/galery/6.jpg" alt="...">
+	    </div>
+	    <div class="item">
+	      <img src="assets/img/galery/7.jpg" alt="...">
+	    </div>
+	    <div class="item">
+	      <img src="assets/img/galery/8.jpg" alt="...">
+	    </div>
+	    <div class="item">
+	      <img src="assets/img/galery/9.jpg" alt="...">
+	    </div>
 	  </div>
 
 	  <!-- Controls -->
